hello-world/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  labels:
    app: hello-world
spec:
  type: ClusterIp
  ports:
  - port: 80
  selector:
    app: hello-world
