hello-world/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
spec:
  rules:
  - host: fleet-managed-downstream.local
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service:
            name: hello-world-svc
            port: 80
